--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,6 @@
     "build": "npm i",
     "dev": "nodemon server.js"
   },
-
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -20,6 +19,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.2",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.1"
   }
