--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^7.3.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
-    "socket.io": "^4.7.1"
+    "socket.io": "^4.7.1",
+    "socket.io-client": "^4.7.1"
   }
 }
